# openmic

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml
data/: config.h.in
include/OpenMic/: context.h  module-loader.h  module-manager.h  module.h  node.h  openmic.h
include/OpenMic/nodes/: file-player.h  input.h  output.h
po/: meson.build
po/cli/: en.po
po/lib/: en.po  meson.build
src/cli/: main.c
src/lib/: context.c  module-loader.c  module-manager.c  module.c  node.c  openmic.c
src/lib/nodes/: file-player.c  input.c  output.c
